--- a/IOS App/Slug Ride 2/Base.lproj/Main.storyboard
+++ b/IOS App/Slug Ride 2/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="FNp-S1-Dae">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="FNp-S1-Dae">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -2200,7 +2200,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a6N-Sf-PVf" customClass="GMSMapView">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="428"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Start Location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="p1C-9L-vjE">
@@ -2232,21 +2232,26 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8EU-i4-Zqb">
-                                <rect key="frame" x="50" y="578" width="275" height="30"/>
+                                <rect key="frame" x="75" y="578" width="222" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BlP-v5-wqV">
-                                <rect key="frame" x="50" y="578" width="275" height="30"/>
-                                <state key="normal" title="SHOW DIRECTION"/>
+                                <rect key="frame" x="75" y="578" width="213" height="30"/>
+                                <state key="normal" title="SHOW DIRECTION">
+                                    <color key="titleColor" red="0.47667680870000001" green="0.15539044160000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="showDirection:" destination="xeg-Fk-xWD" eventType="touchUpInside" id="Mah-w5-9sy"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dk9-Ab-Zcb">
-                                <rect key="frame" x="20" y="540" width="65" height="30"/>
-                                <state key="normal" title="Post Ride"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dk9-Ab-Zcb">
+                                <rect key="frame" x="20" y="540" width="75" height="30"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Post Ride">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
                                 <connections>
                                     <action selector="driverPostRide:" destination="xeg-Fk-xWD" eventType="touchUpInside" id="76I-SB-r5V"/>
                                 </connections>
@@ -2254,28 +2259,28 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="8EU-i4-Zqb" firstAttribute="centerX" secondItem="BlP-v5-wqV" secondAttribute="centerX" id="4iS-iB-5AR"/>
+                            <constraint firstItem="8EU-i4-Zqb" firstAttribute="centerX" secondItem="BlP-v5-wqV" secondAttribute="centerX" constant="4.5" id="4iS-iB-5AR"/>
                             <constraint firstItem="uRw-uy-WOZ" firstAttribute="centerX" secondItem="By2-mG-kgC" secondAttribute="centerX" id="8ML-6A-HAg"/>
-                            <constraint firstAttribute="trailing" secondItem="BlP-v5-wqV" secondAttribute="trailing" constant="50" id="9fy-aK-5Uq"/>
+                            <constraint firstAttribute="trailing" secondItem="BlP-v5-wqV" secondAttribute="trailing" constant="87" id="9fy-aK-5Uq"/>
                             <constraint firstItem="Dk9-Ab-Zcb" firstAttribute="leading" secondItem="uRw-uy-WOZ" secondAttribute="leading" id="Avb-B0-Cjc"/>
                             <constraint firstItem="p1C-9L-vjE" firstAttribute="leading" secondItem="pg9-Nn-fov" secondAttribute="leading" constant="20" id="B6b-4D-W4y"/>
                             <constraint firstItem="a6N-Sf-PVf" firstAttribute="top" secondItem="pg9-Nn-fov" secondAttribute="top" id="Be3-1B-lQm"/>
                             <constraint firstItem="a6N-Sf-PVf" firstAttribute="leading" secondItem="pg9-Nn-fov" secondAttribute="leading" id="BlK-1A-vh4"/>
                             <constraint firstAttribute="trailing" secondItem="p1C-9L-vjE" secondAttribute="trailing" constant="20" id="Fea-DN-2aQ"/>
                             <constraint firstItem="7qj-fF-p8A" firstAttribute="top" secondItem="Dk9-Ab-Zcb" secondAttribute="bottom" constant="48" id="KcD-hM-3lr"/>
-                            <constraint firstItem="p1C-9L-vjE" firstAttribute="top" secondItem="a6N-Sf-PVf" secondAttribute="bottom" constant="20" id="O41-qe-j46"/>
                             <constraint firstItem="By2-mG-kgC" firstAttribute="leading" secondItem="p1C-9L-vjE" secondAttribute="leading" id="Q7L-Uu-NNx"/>
                             <constraint firstItem="8EU-i4-Zqb" firstAttribute="height" secondItem="BlP-v5-wqV" secondAttribute="height" id="Qpf-9t-zGk"/>
                             <constraint firstItem="By2-mG-kgC" firstAttribute="trailing" secondItem="p1C-9L-vjE" secondAttribute="trailing" id="RR6-pK-CFC"/>
                             <constraint firstAttribute="trailing" secondItem="a6N-Sf-PVf" secondAttribute="trailing" id="RZH-co-LeG"/>
                             <constraint firstItem="uRw-uy-WOZ" firstAttribute="height" secondItem="By2-mG-kgC" secondAttribute="height" id="SUH-ky-jzj"/>
+                            <constraint firstItem="a6N-Sf-PVf" firstAttribute="bottom" secondItem="7qj-fF-p8A" secondAttribute="top" id="XzW-Ux-3dr"/>
                             <constraint firstItem="uRw-uy-WOZ" firstAttribute="centerY" secondItem="By2-mG-kgC" secondAttribute="centerY" id="dbC-l2-U9s"/>
-                            <constraint firstItem="BlP-v5-wqV" firstAttribute="leading" secondItem="pg9-Nn-fov" secondAttribute="leading" constant="50" id="e2B-QN-3Yq"/>
+                            <constraint firstItem="BlP-v5-wqV" firstAttribute="leading" secondItem="pg9-Nn-fov" secondAttribute="leading" constant="75" id="e2B-QN-3Yq"/>
                             <constraint firstItem="DlW-2q-cbl" firstAttribute="centerY" secondItem="p1C-9L-vjE" secondAttribute="centerY" id="gV7-Ye-dGZ"/>
                             <constraint firstItem="By2-mG-kgC" firstAttribute="height" secondItem="p1C-9L-vjE" secondAttribute="height" id="mWu-fN-PVN"/>
                             <constraint firstItem="BlP-v5-wqV" firstAttribute="top" secondItem="By2-mG-kgC" secondAttribute="bottom" constant="50" id="peR-fa-FiM"/>
                             <constraint firstItem="7qj-fF-p8A" firstAttribute="top" secondItem="BlP-v5-wqV" secondAttribute="bottom" constant="10" id="pzc-HR-cxG"/>
-                            <constraint firstItem="8EU-i4-Zqb" firstAttribute="width" secondItem="BlP-v5-wqV" secondAttribute="width" id="rS4-or-Oky"/>
+                            <constraint firstItem="8EU-i4-Zqb" firstAttribute="width" secondItem="BlP-v5-wqV" secondAttribute="width" constant="9" id="rS4-or-Oky"/>
                             <constraint firstItem="By2-mG-kgC" firstAttribute="top" secondItem="p1C-9L-vjE" secondAttribute="bottom" constant="10" id="rwD-Bu-Uan"/>
                             <constraint firstItem="DlW-2q-cbl" firstAttribute="width" secondItem="p1C-9L-vjE" secondAttribute="width" id="sNh-B0-poD"/>
                             <constraint firstItem="DlW-2q-cbl" firstAttribute="height" secondItem="p1C-9L-vjE" secondAttribute="height" id="vgq-XG-zXV"/>
